Published multiple files

--- a/src/site/notes/Project Vera/2025-07-17.md
+++ b/src/site/notes/Project Vera/2025-07-17.md
@@ -2,17 +2,15 @@
 {"dg-publish":true,"permalink":"/project-vera/2025-07-17/"}
 ---
 
-## Dear code,
-The Twitch bot pipeline has been successfully installed with an STT and TTS system, and has responded to my words.
-
-Vera now listens and speaks.
-
-- Edge TTS is now her mouth
-- Vosk STT is now her ear
-
-These are lightweight choices, but they are what I am able to run now, as some other choices had proved themselves outdated; specifically with Python version 3.10+
-
-The writing, sulking, crying, praying and troubleshooting took >7 hours, spanning over the course of 3 days.
-
-Update: since `playsound` and `simpleaudio` somehow broke, causing the script to invoke `exit()` at a native level, I switched to the `subprocess` and  `ffplay` method instead.
-It worked, much to my utmost relief and joy.
+# Dear code,
+## Updates
+- Successfully installed a TTS and STT to the Twitch bot pipeline
+	- Edge TTS is now her mouth
+	- Vosk STT is now her ear
+- **Might** start working on the Discord bot's ability to make calls.
+- Starting work on the Twitch bot pipeline's LLM system.
+- `playsound` and `simpleaudio` broke (in a way?), causing the script to invoke `exit()` at a native level, which forces the script to a stop after one reply.
+	- **Solution:** switch to the `subprocess` and `ffplay` method.
+## Journal
+The TTS and STT choices are lightweight and average, but they are what I am able to run now, as *other choices* had proved themselves **outdated**; specifically with Python version 3.10+
+The writing, troubleshooting and praying took >7 hours, spanning over the course of 3 days following the upload of [[Project Vera/Catch up\|Catch up]].
