Published multiple files

--- a/src/site/notes/upd and jrnl/2025-07-24.md
+++ b/src/site/notes/upd and jrnl/2025-07-24.md
@@ -13,13 +13,14 @@ Let's get to work.
 
 ## Journal
 Like I said, it's about time I start running again. No more limping. No more 5m in bed.
-The first steps were simple - instead of playing games late into the night, sleep. And instead of resorting to such things, flesh out a schedule that won't fuck up myself.
+The first steps were simple - instead of playing games late into the night, sleep. And instead of resorting to such things, flesh out a schedule that won't lead to me fucking up myself.
 
-Dad has been forgetting things recently; early-set Alzheimers? Slim chance, but not impossible. But it is not a chance to fret or frown. It is a sign that I must ***start running***.
+Dad has been forgetting things recently; early-set Alzheimer? Slim chance, but not impossible. But it is not a chance to fret or frown. It is a sign that I must ***start running***.
 
-2025, Vedal turned 21. He debuted in 2022 - when he was 18. If he can do it, I can, too.
-Vedal, born 10th Febuary - Aquarius. I, born 31st January - also Aquarius.
-According to the [16 Personailty Test](https://www.16personalities.com/free-personality-test), Vedal is a Logician (INTP-T), and I, an Advocate (INFJ-T).
-We are *different*, one way or another, but when the goals align and the will matches; I *will* be where you stepped - behind or ahead.
-This is not obsession with Vedal nor a spontaneous and short-lived motivational rant; it is to show that where I am not the best at showing my will through words, I make up for in action.
-*Because I do it not for the money nor the validation that I craved; I do it because it is my purpose, one that I've found and pulled myself onto amidst the dark. One that **resonates.***
+2025, Vedal turned 21(?). He made the OSU! bot that is now known as Neuro in 2018 - when he was 14(?). If he can achieve such feat, I can too. Doesn't matter if he got help of any kind in the making of Neuro.
+Vedal, born 10th February - Aquarius. I, born 31st January - also Aquarius.
+According to the [16 Personailties Test](https://www.16personalities.com/free-personality-test), Vedal is a *Logician (INTP-T)*, and I, an *Advocate (INFJ-T)*.
+We are *different*, one way or another, but when the goals align and the will matches; I *will* be where he stepped - behind or ahead.
+
+This is not an obsession with Vedal nor a spontaneous and short-lived motivational rant; it is to show that where I am not the best at showing my will through words, I make up for in action and fruition.
+*Because I do it not for the money nor the validation that I craved; I do it because it is my purpose; one that I've found and pulled myself onto amidst the dark; one that **resonates.***
