Published multiple files

--- a/src/site/notes/upd and jrnl/2025-07-23.md
+++ b/src/site/notes/upd and jrnl/2025-07-23.md
@@ -6,9 +6,13 @@
 Today's a day of a small victory.
 
 ## Updates
-- Successfully deployed COEIROINK TTS via API method. The work took ~6h, spanning across 1 evening, 1 night, 1 morning, and 1 afternoon; with the help of Google Translate.
+- Successfully deployed *COEIROINK V2* TTS via API method. The work took ~6h, spanning across 1 evening, 1 night, 1 morning, and 1 afternoon; with the help of Google Translate.
+- The audio is now played via `simpleaudio` - faster than `ffplay`+`subprocess`, but the problem of audio file not deleting itself after playing returns. Will need further troubleshooting.
+	- The invocation of `exit()` is no longer a problem, for some reason.
 
 ## Journal
-Through small actions like planned chores and studies, I took the first step towards self-betterment.
+Through small actions like **planned** chores and studies, I took the first step towards self-betterment.
 It is small, but significant - like a baby's first step.
 It is a start.
+
+Funny moment: it took me 2 hours to figure out that the **engine** of *COEIROINK V2 came with the main download folder, under a subfolder ***"engine"***, and that the `error 400` I had been having was not due to syntax error nor anything host-side; but that I hadn't started the server engine. Imagine the breath I released when I figured it out.
