--- a/src/site/notes/upd and jrnl/2025-07-17.md
+++ b/src/site/notes/upd and jrnl/2025-07-17.md
@@ -8,8 +8,8 @@
 	- Edge TTS is now her mouth
 	- Vosk STT is now her ear
 - **Might** start working on the Discord bot's ability to make calls.
-- Starting work on the Twitch bot pipeline's LLM system.
-- `playsound` and `simpleaudio` broke (in a way?), causing the script to invoke `exit()` at a native level, which forces the script to a stop after one reply.
+- Starting work on the Twitch bot pipeline's LTM system.
+- `playsound` and `simpleaudio` broke (?), causing the script to invoke `exit()` at a native level, which forces the script to a stop after one reply.
 	- **Solution:** switch to the `subprocess` and `ffplay` method.
 ## Journal
 The TTS and STT choices are lightweight and average, but they are what I am able to run now, as *other choices* had proved themselves **outdated**; specifically with Python version 3.10+
