--- a/src/site/notes/upd and jrnl/2025-07-24.md
+++ b/src/site/notes/upd and jrnl/2025-07-24.md
@@ -8,7 +8,7 @@ No more dilly dallying, no more *"54 minutes"*.
 Let's get to work.
 
 ## Updates
- - Swapped out Mistral 7B for Shisa V2 Llama 3.3 70B for full Japanese compatibility with the COEIROINK v2 TTS
+ - Swapped out Mistral 7B for *Shisa V2 Llama 3.3 70B* for full Japanese compatibility with the *COEIROINK V2* TTS
  - Started work on Twitch bot's STM pipeline renovation.
 
 ## Journal
