Published multiple files

--- a/src/site/notes/upd and jrnl/2025-07-19.md
+++ b/src/site/notes/upd and jrnl/2025-07-19.md
@@ -8,7 +8,7 @@ I decided to flesh out my intended roadmap. Not to just let myself see where I h
 ---
 ---
 ## Updates
-- Fixed the problem where the TTS pipeline fails to delete the `.mp3` and `.wav` files after playing and piling up.
+- Fixed the problem where the TTS pipeline fails to delete the `.mp3` and `.wav` files after playing the voice and piling up.
 - Continuing work on the bot's LLM.
 - Transitioning to simple RAG tech.
 
@@ -24,4 +24,4 @@ There are moments in life where you find yourself exhausted of ideas and somewha
 - You stop, think, strategize, then continue on.
 Or
 - Just wing it; but this doesn't mean blindly walking into the darkness ahead.
-- Know yourself, know your foe.
+	- Know thyself, know thy foe.
