--- a/src/site/notes/upd and jrnl/2025-07-22.md
+++ b/src/site/notes/upd and jrnl/2025-07-22.md
@@ -15,9 +15,9 @@ Updates soon.
 ---
 ## Journal
 Is it normal to feel... **numb**? Especially this early on?
-It's been only nearly 3 months, how can I feel numb this early in? Lack of motivation? Laziness? A burnout? Can't be; I've only done so much. Must be a childish episode of "Ooh I'm so tired, I must playyyy."
+It's been only nearly 3 months, how can I feel numb this early in? Lack of motivation? Laziness? A burnout? Can't be; I've only done so much. Must be a childish episode of "I wanna playyy."
 I need to slow down.
 I need to take a look.
-I need to focus.
+I need to refocus.
 I'm a junkie. An adrenaline junkie.
-And I need to do something.
+And I need to do something about that.
