--- a/src/site/notes/upd and jrnl/2025-07-23.md
+++ b/src/site/notes/upd and jrnl/2025-07-23.md
@@ -19,4 +19,4 @@ Through small actions like **planned** chores and studies, I took the first step
 It is small, but significant - like a baby's first step.
 It is a start.
 
-Funny moment: it took me 2 hours to figure out that the **engine** of *COEIROINK V2 came with the main download folder, under a subfolder ***"engine"***, and that the `error 400` I had been having was not due to syntax error nor anything host-side; but that I hadn't started the server engine. Imagine the breath I released when I figured it out.
+Funny moment: it took me 2 hours to figure out that the **engine** of *COEIROINK V2 came with the main download folder, under a subfolder ***"engine"***, and that the `error 400` I had been having was not due to syntax error or anything - but that I hadn't started the server engine. Imagine the sigh I let out when I figured it out.
