--- a/src/site/notes/upd and jrnl/2025-07-24.md
+++ b/src/site/notes/upd and jrnl/2025-07-24.md
@@ -17,12 +17,12 @@ Let's get to work.
 ---
 ## Journal
 Like I said, it's about time I start running again. No more limping. No more 5m in bed.
-The first steps were simple - instead of playing games late into the night, sleep. And instead of resorting to such things, flesh out a schedule that won't lead to me fucking up myself.
+The first steps were simple - instead of playing games late into the night, sleep. And instead of resorting to such things, flesh out a schedule that won't lead to me screwing myself over.
 
 Dad has been forgetting things recently; early-set Alzheimer? Slim chance, but not impossible. But it is not a chance to fret or frown. It is a sign that I must ***start running***.
 
 2025, Vedal turned 21(?). He made the OSU! bot that is now known as Neuro in 2018 - when he was 14(?). If he can achieve such feat, I can too. Doesn't matter if he got help of any kind in the making of Neuro.
-Vedal, born 10th February - Aquarius. I, born 31st January - also Aquarius.
+Vedal, born 10th February - Aquarius. I, *also Aquarius*.
 He is a self-taught programmer, *so am I*.
 According to the [16 Personailties Test](https://www.16personalities.com/free-personality-test), Vedal is a *Logician (INTP-T)*, and I, an *Advocate (INFJ-T)*.
 **We are *different*, one way or another, but when the goals align and the will matches/exceeds; I *will* be where he stepped - behind or ahead.**
