--- a/src/site/notes/upd and jrnl/2025-08-01.md
+++ b/src/site/notes/upd and jrnl/2025-08-01.md
@@ -20,8 +20,8 @@ New month, new achievement.
 ---
 ---
 ## Journal
-I'm thinking about jobs recently.
+I've been thinking about jobs recently.
 To be specific, I'm finding jobs that gives me time while pays well enough for me to initialize savings while also covering the spendings. 'Bout time I think ahead of the game, no?
 
 If you ask what I'll do with the money, the first thing is to get stable housing and food. Then I'm beelining towards building a proper workstation. Seems simple, but even now, I'm scratching my head over the choice of jobs available; in other words, I dunno what to do after College/University.
-Btw, I'm aiming for a spot in Digital Communications major.
+Btw, I'm aiming to major in Digital Communications.
