--- a/src/site/notes/upd and jrnl/2025-08-06.md
+++ b/src/site/notes/upd and jrnl/2025-08-06.md
@@ -32,7 +32,6 @@ There is hope for me yet. I've taken some serious steps, to falter now is to bet
 
 --------------------
 
-Mother keep nagging about me picking a job, I did, but I do *not* think she should know. Ever.
-I hope she can just shut up and look me dead in the eye and read my intentions for once; so oblivious and idiotic for someone who claims to "know everything" about me.
-Does she know that I jack off everytime I'm alone? Fuck no.
-Does she know that I've began working on myself **long** ago? Seems not, considering how she keeps yapping so damn much.
+Mother keeps nagging about me picking a job, **that I did**. But I do *not* think she should know.
+Asians can't afford that kind of support for content creating, apparently - and for a reason I find... appropriate, under certain conditions. From unstable income to low chance of blowing up given the digital market at the moment - but what about in 10 years? 15 years?
+Moreover, my path also included stable corporate jobs to support myself, so what's the big deal?
