Published multiple files

--- a/src/site/notes/upd and jrnl/2025-08-06.md
+++ b/src/site/notes/upd and jrnl/2025-08-06.md
@@ -33,5 +33,6 @@ There is hope for me yet. I've taken some serious steps, to falter now is to bet
 --------------------
 
 Mother keeps nagging about me picking a job, **that I did**. But I do *not* think she should know.
-Asians can't afford that kind of support for content creating, apparently - and for a reason I find... appropriate, under certain conditions. From unstable income to low chance of blowing up given the digital market at the moment - but what about in 10 years? 15 years?
-Moreover, my path also included stable corporate jobs to support myself, so what's the big deal?
+Asians can't afford that kind of support for content creating, apparently - and for reasons I find... valid, from unstable income to low chance of blowing up given the digital market at the moment. In fact, VTubing has always been considered a side hustle, even for big shots of the industry.
+But given the employment trend of now, what about 10-15 years later?
+Moreover, even if my prediction about the job market is wrong, my roadmap also included stable corporate jobs to support myself and is well within my capabilities, so what's the big deal?
