Published multiple files

--- a/src/site/notes/upd and jrnl/2025-07-24.md
+++ b/src/site/notes/upd and jrnl/2025-07-24.md
@@ -24,8 +24,8 @@ Dad has been forgetting things recently; early-set Alzheimer? Slim chance, but n
 2025, Vedal turned 21(?). He made the OSU! bot that is now known as Neuro in 2018 - when he was 14(?). If he can achieve such feat, I can too. Doesn't matter if he got help of any kind in the making of Neuro.
 Vedal, born 10th February - Aquarius. I, *also Aquarius*.
 He is a self-taught programmer, *so am I*.
-According to the [16 Personailties Test](https://www.16personalities.com/free-personality-test), Vedal is a *Logician (INTP-T)*, and I, an *Advocate (INFJ-T)*.
+According to the [16 Personailties Test](https://www.16personalities.com/free-personality-test), Vedal is a *Logician (INTP-T)*, and I, an *Architect (INTJ-T)*.
 **We are *different*, one way or another, but when the goals align and the will matches/exceeds; I *will* be where he stepped - behind or ahead.**
 
-This is not an obsession with Vedal nor a spontaneous and short-lived motivational rant; it is to show that where I am not the best at showing my will through words, I make up for in action and fruition.
-*Because I do it not for the money nor the validation that I craved; I do it because it is my purpose; one that I've found and pulled myself onto amidst the dark; one that **resonates.***
+This is not an obsession with Vedal nor a spontaneous and short-lived motivational rant; it is to show that where I am not the best at showing my will through words, I make up for in planning, action, and fruition.
+*Because I do it not for the money nor the validation that I craved; I do it because it is my purpose-one that I've found and pulled myself onto amidst the dark; one that **resonates.***
