--- a/src/site/notes/upd and jrnl/2025-10-31.md
+++ b/src/site/notes/upd and jrnl/2025-10-31.md
@@ -3,10 +3,15 @@
 ---
 
 # Dear diary,
-### 4-week catch up
+### 5-week catch up
 The pc had grounding problems. Self-diagnosing and fixing took 4 weeks. But much transpired during that time.
-### Week 7 recap
+### Week 8 recap
 The last 2 weeks were... mentally taxing. I could almost feel my mind sliding across a floor, but the floor is a giant cheese grater.
 Mother got a job, but no more than 2 weeks later she quitted.
 I want to say she's weak and giving up but... who am I - and in what position am I - to do that, really?
 But with this diary back on, and some lessons learnt the painful way, I expect the march to realign.
+
+##### also,
+# Dear code,
+## Updates
+- Upgraded from 256GB Colorful SSD to 500GB Crucial SSD
