Published multiple files

--- a/src/site/notes/upd and jrnl/2025-10-31.md
+++ b/src/site/notes/upd and jrnl/2025-10-31.md
@@ -13,5 +13,6 @@ But with this diary back on, and some lessons learnt the painful way, I expect t
 
 ##### also,
 # Dear code,
-## Updates
+### Updates
 - Upgraded from 256GB Colorful SSD to 500GB Crucial SSD
+- Upgraded from a 400W PSU to 500W PSU
